# daalu

./: .bazelrc  .gitignore  .gitmodules  BUILD  Dockerfile  MODULE.axl  MODULE.bazel  README.bazel.md  README.md  README_edit.md  gazelle_python.yaml  main.py  main_old.py  main_with_tags.py  pyproject.toml  requirements.txt  run.txt
.aspect/: task.axl
.aspect/cli/: config.yaml
assets/barbican/: values.yaml
assets/bmh/: cp01.yaml  cp02.yaml
assets/cert-manager/: config.yaml  values.yaml
assets/cinder/: values.yaml
assets/cluster_issuer/: config.yaml
assets/coredns/: values.yaml
assets/csi/: values.yaml
assets/frr-k8s/: values.yaml
assets/glance/: images-rbd-keyring.yaml  values.yaml
assets/goldpinger/: values.yaml
assets/heat/: values.yaml
assets/horizon/: values.yaml
assets/ipmi_exporter/: config.yaml
assets/istio/: config.yaml  istio-ingressgateway-values.yaml  traffic.yaml
assets/istio/gateway/: values.schema.json
assets/jenkins/: config.yaml  storageclass.yaml  values.yaml
assets/keepalived/: keepalived.conf.j2  manifests.yaml.j2  values.yaml
assets/keycloak/: values.yaml
assets/keystone/: values.yaml
assets/keystone/templates/: virtualservice.yaml.j2
assets/loki/: values.yaml
assets/manila/: values.yaml
assets/memcached/: values.yaml
assets/metallb/: config.yaml  values.yaml
assets/neutron/: values.yaml
assets/node-feature-discovery/: values.yaml
assets/nova/: values.yaml
assets/octavia/: values.yaml
assets/opensearch/: opensearch-secret.yaml  values.yaml
assets/openstack-cli/: openstack-cli-pod.yaml
assets/openvswitch/: values.yaml
assets/percona-xtradb-cluster/: spec.yaml
assets/prometheus_pushgateway/: values.yaml
assets/rabbitmq-cluster-operator/: values.yaml
assets/rook-ceph/: rook-ceph.yaml
assets/rook-ceph-cluster/: values.yaml
assets/staffeln/: values.yaml
assets/thanos/: thanos-objstore-secret.yaml  values.yaml
assets/valkey/: values.yaml
assets/vector/: values.yaml
cloud-config/: cluster-api-infra.kubeconfig  requirements.txt  requirements.yml  secrets.yaml.example
cloud-config/inventory/: hosts.ini  hosts.ini.example  openstack_hosts.ini  openstack_hosts.ini.example
cloud-config/playbooks/: site.yml
cloud-config/random_yamls/: enable_hubble.yaml  glance-keyring.yml  images-rbd-keyring.yaml
cluster-defs/: cluster.yaml.example
cluster-defs/cluster-api/: openstack-cluster-api-secret.yaml  openstack-cluster-api.yaml
cluster-defs/hpc/: hpc-cluster.yaml
daalu_io/daalu/daalu/: .env.example  .gitignore  BUILD  MODULE.bazel  (+4 more)
docs/: metal3-cluster-api-setup.md
env/: envvars
helm-charts/argocd/: values.yaml
helm-charts/glance/: values.yaml
helm-charts/jenkins/: Chart.yaml  values.yaml
helm-charts/octavia/: values.yaml
helm-charts/opensearch/: Chart.yaml
helm-charts/ovn/: values.yaml
helm-charts/thanos/: values.yaml
helm-charts/vcluster/: Chart.yaml
helm-values/: ingress-nginx.yaml
playbooks/atmosphere/: CHANGELOG.rst  FILES.json  MANIFEST.json
playbooks/ceph/: FILES.json  MANIFEST.json
playbooks/containers/: FILES.json  MANIFEST.json
playbooks/env/: cmdline  envvars
playbooks/kubernetes/: FILES.json  MANIFEST.json
requirements/: BUILD  all.in  all.txt  runtime.in
scripts/: generate-secrets.sh  sync_argocd_apps.sh
src/: BUILD
src/daalu/: BUILD
src/daalu.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
templates/cluster-api/: cluster-api-secret.yaml.j2  cluster-api.yaml.j2
templates/setup/: hosts.ini.j2
tests/bootstrap/: test_ceph_manager.py  test_node_bootstrapper.py  test_setup_manager.py
tests/config/: test_loader.py
tests/deploy/: test_planner.py
tests/helm/: test_cli_runner.py
tests/observers/: test_observers.py
tools/: BUILD  repin
tools/format/: BUILD
tools/lint/: linters.bzl
(+4965 files in other folders)
