[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "daalu"
version = "0.1.0"
description = "Infra automation SDK for Atmosphere"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["ansible-runner", "click", "docker-image-py", "jmespath", "netaddr"]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
daalu-deploy = "daalu.main:deploy_all"
